# xcb__historic

./: .cvsignore  COPYING  Imakefile  Makefile  Makefile.am  RATIONALE  TODO  autoconfigure.sh  configure.ac  dpms.c  hypnomoire.c  macros-c.m4  macros.m4  main.c  reply_formats.c  reply_formats.h  xcb_conn.m4  xcb_dpms.m4  xcb_proto_macros.tex  xcb_shape.m4  xcbgen.m4  xp_core.m4
CVSROOT/: checkoutlist  commit_prep.pl  commitcheck  commitinfo  config  log_accum.pl  loginfo  logmail  syncmail
doc/: Imakefile  Makefile.am
doc/specs/: Imakefile
doc/specs/XCB/: .cvsignore  Imakefile  xcb_proto_macros.tex
lib/: Imakefile
lib/XCB/: .cvsignore  Imakefile  macros-c.m4  macros-xcb.m4  xcb.h  xcb.m4  xcb_conn.m4  xcb_consts.h  xcb_extension.h  xcb_io.c  xcb_io.h  xcb_list.c  xcb_list.h  xcb_list.m4  xcb_render.m4  xcb_shape.m4  xcb_types.m4  xp_core.m4
lib/XCL/: Backgnd.c  Bell.c  ChProp.c  ChWindow.c  ChkTypWEv.c  ClDisplay.c  Clear.c  ClearArea.c  ConfWind.c  ConvSel.c  CopyArea.c  CrCmap.c  CrGC.c  CrPixmap.c  CrWindow.c  Cursor.c  DefCursor.c  DelProp.c  DisName.c  DrLine.c  DrPoint.c  DrRect.c  ErrDes.c  EvToWire.c  FetchName.c  FillPoly.c  FillRct.c  Flush.c  Font.c  Free.c  FreeCmap.c  FreeCols.c  FreeCurs.c  FreePix.c  GetAtomNm.c  GetGeom.c  GetHColor.c  GetPntMap.c  GetProp.c  GetSOwner.c  (+44 more)
libXamine/: Makefile.am  README  configure.ac  libXamine.pc.in
libXamine/debian/: changelog  control  copyright  rules
libXamine/src/: strsplit.c  strsplit.h  xamine.c  xamine.h
programs/: Imakefile
programs/hypnomoire/: .cvsignore  Imakefile  hypnomoire.c
programs/xcbtests/: .cvsignore  Imakefile  dpms.c  main.c  rendertest.c  reply_formats.c  reply_formats.h  xdpyinfo.c
xcb/: ChangeLog  Makefile.am  configure.ac  xcb.pc.in
xcb-demo/: .cvsignore  Makefile.am  configure.ac  dpms.c  hypnomoire.c  main.c  rendertest.c  reply_formats.c  reply_formats.h  xcbrandr.c  xcbxvinfo.c  xdpyinfo.c
xcb-demo/tests/: Makefile.am  julia.c  julia.h  lissajoux.c  lissajoux.h
xcb-proto/: COPYING  TODO  configure.ac  xcb-proto.pc.in
xcb-proto/debian/: changelog  control  copyright.debian  rules
xcb-proto/doc/: xml-xcb.txt
xcb-proto/src/: Makefile.am  generics.xcb  xcb.xcb  xcb.xsd  xcb_types.xcb  xcb_types.xml  xproto.xcb  xproto.xml
xcb-proto/src/extensions/: bigreq.xcb  bigreq.xml  composite.xml  damage.xml  dpms.xcb  dpms.xml  glx.xml  record.xml  render.xcb  render.xml  shape.xcb  shape.xml  shm.xcb  shm.xml  sync.xcb  sync.xml  xc_misc.xcb  xc_misc.xml  xevie.xml  xfixes.xml  xprint.xml  xv.xml
xcb-util/: Makefile.am  configure.ac
xcb-util/atom/: Makefile.am  xcb_atom.h.m4
xcb-util/convenient/: Makefile.am  xcb-convenient.pc.in  xcb_aux.c  xcb_aux.h  xcb_convenient.c  xcb_convenient.h
xcb-util/event/: Makefile.am  events.c
xcb-util/icccm/: Makefile.am  icccm.c  xcb_icccm.h
xcb-util/image/: .cvsignore  Makefile  Makefile.am  build_shm_test.sh  build_standard_test.sh  test_xcb_image.c  test_xcb_image_shm.c  xcb-image.pc.in  xcb_image.c  xcb_image.h
xcb-util/property/: Makefile.am
xcb-util/reply/: reply.c  test_reply.c
xcb-util/wm/: Makefile.am  xcbwm-test.c
xcb/debian/: changelog  control  copyright.debian  rules
xcb/doc/tutorial/: index.html
xcb/src/: .cvsignore  Makefile.am  c-client.xsl  check_all.c  check_public.c  client-c.xcb  macros-c.m4  macros-xcb.m4  xcb.h  xcb.h.m4  xcb_auth.c  xcb_conn.c  xcb_conn.h  xcb_conn.m4  xcb_event.c  xcb_event.h  xcb_ext.c  xcb_extension.c  xcb_extension.h  xcb_in.c  xcb_io.c  xcb_io.h  xcb_list.c  xcb_list.h  xcb_out.c  xcb_trace.h  xcb_util.c  xcb_xid.c  xcbext.h  xcbint.h
xcl/src/: .cvsignore  ChGC.c  ChKeyCon.c  ChkTypWEv.c  Cursor.c  DisName.c  ErrDes.c  ErrHndlr.c  EvToWire.c  FetchName.c  FillRct.c  Font.c  Free.c  FreeGC.c  GetAtomNm.c  GetHColor.c  GetKCnt.c  GetPntMap.c  GetProp.c  GetSOwner.c  GetWAttrs.c  GrKeybd.c  GrPointer.c  Iconify.c  IfEvent.c  IntAtom.c  KeyBind.c  ListExt.c  LoadFont.c  Macros.c  ModMap.c  NextEvent.c  OpenDis.c  ParseCol.c  ParseGeom.c  Pending.c  PutImage.c  QuExt.c  QuPntr.c  Quarks.c  (+20 more)
xhsb/: Main.hs  XCBExt.hs  XProto.glue.c  XProto.glue.h  XProto.hs
