## Process this file with automake to produce Makefile.in

## Copyright (C) 2001-2002 Bart Massey and Jamey Sharp.
## All Rights Reserved.  See the file COPYING in this directory
## for licensing information.

AUTOMAKE_OPTIONS = foreign
SUBDIRS = client test doc

sources:
	$(MAKE) -C client sources
