nobase_xcbinclude_HEADERS = xcb.xsd                  \
                            xcb_types.xml            \
                            xproto.xml               \
                            extensions/bigreq.xml    \
                            extensions/composite.xml \
                            extensions/damage.xml    \
                            extensions/dpms.xml      \
                            extensions/glx.xml       \
                            extensions/randr.xml     \
                            extensions/record.xml    \
                            extensions/render.xml    \
                            extensions/shape.xml     \
                            extensions/shm.xml       \
                            extensions/sync.xml      \
                            extensions/xc_misc.xml   \
                            extensions/xevie.xml     \
			    extensions/xf86dri.xml   \
                            extensions/xfixes.xml
